--- a/app/src/main/res/drawable/icon_online_test_time.xml
+++ b/app/src/main/res/drawable/icon_online_test_time.xml
@@ -5,6 +5,6 @@
     android:viewportHeight="14">
   <path
       android:pathData="M9.4,7.6L7,7.6C6.669,7.6 6.4,7.332 6.4,7V4.6C6.4,4.268 6.669,4 7,4C7.331,4 7.6,4.268 7.6,4.6V6.4L9.4,6.4C9.732,6.4 10,6.668 10,7C10,7.332 9.732,7.6 9.4,7.6ZM7,1C3.692,1 1,3.692 1,7C1,10.308 3.692,13 7,13C10.308,13 13,10.308 13,7C13,3.692 10.308,1 7,1"
-      android:fillColor="#2F64A3"
+      android:fillColor="#B32F64A3"
       android:fillType="evenOdd"/>
 </vector>
