--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -222,13 +222,13 @@
                     android:id="@+id/scheduleDateEt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="18dp"
                     android:layout_marginBottom="8dp"
                     android:text="14 Apr 2022"
                     android:textSize="12sp"
                     android:textStyle="bold"
+                    android:layout_marginTop="1dp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/scheduleDate"
                     app:layout_constraintTop_toBottomOf="@+id/scheduleDate" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -267,13 +267,13 @@
                     android:id="@+id/scheduleTimeEt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="18dp"
                     android:layout_marginBottom="8dp"
                     android:text="3:00 PM"
                     android:textSize="12sp"
                     android:textStyle="bold"
+                    android:layout_marginTop="1dp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/scheduleTime"
                     app:layout_constraintTop_toBottomOf="@+id/scheduleTime" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -282,10 +282,10 @@
                 android:id="@+id/scheduleAddToCalender"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginVertical="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginVertical="4dp"
+                app:layout_constraintBottom_toBottomOf="@+id/scheduleTimeConstraints"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toTopOf="@+id/scheduleTimeConstraints">
 
                 <ImageView
                     android:id="@+id/addToCalenderIcon"
@@ -303,7 +303,7 @@
                     android:layout_height="wrap_content"
                     android:paddingVertical="8dp"
                     android:text="Add to Calender"
-                    android:textColor="#2F64A3"
+                    android:textColor="#B32F64A3"
                     android:textSize="12sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
