--- a/app/src/main/res/layout/activity_next_design.xml
+++ b/app/src/main/res/layout/activity_next_design.xml
@@ -15,6 +15,7 @@
         android:paddingRight="16dp"
         android:paddingTop="13dp"
         android:paddingBottom="9dp"
+        android:elevation="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -55,7 +56,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
-        android:elevation="5dp"
+        android:elevation="2dp"
         android:paddingBottom="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -204,7 +205,6 @@
                 android:id="@+id/scheduleDateConstraints"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
@@ -248,10 +248,9 @@
                 android:id="@+id/scheduleTimeConstraints"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="@+id/scheduleDateConstraints"
-                app:layout_constraintEnd_toStartOf="@+id/scheduleAddToCalender"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/scheduleDateConstraints"
-                app:layout_constraintTop_toTopOf="@+id/scheduleDateConstraints">
+                app:layout_constraintTop_toTopOf="parent">
 
                 <ImageView
                     android:id="@+id/scheduleTime_icon"
@@ -290,13 +289,56 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/scheduleContactConstraints"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/scheduleDateConstraints"
+                app:layout_constraintTop_toBottomOf="@+id/scheduleDateConstraints">
+
+                <ImageView
+                    android:id="@+id/scheduleContact_icon"
+                    android:layout_width="14dp"
+                    android:layout_height="14dp"
+                    android:src="@drawable/phone_icon"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/scheduleContact"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:text="Contact No"
+                    android:textColor="#2F64A3"
+                    android:textSize="12sp"
+                    android:textStyle="normal"
+                    app:layout_constraintBottom_toBottomOf="@+id/scheduleContact_icon"
+                    app:layout_constraintStart_toEndOf="@+id/scheduleContact_icon"
+                    app:layout_constraintTop_toTopOf="@+id/scheduleContact_icon" />
+
+                <TextView
+                    android:id="@+id/scheduleContactEt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="1dp"
+                    android:layout_marginBottom="8dp"
+                    android:text="+880 16854 46846"
+                    android:textSize="12sp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/scheduleContact"
+                    app:layout_constraintTop_toBottomOf="@+id/scheduleContact" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/scheduleAddToCalender"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="4dp"
-                app:layout_constraintBottom_toBottomOf="@+id/scheduleTimeConstraints"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/scheduleTimeConstraints">
+                app:layout_constraintStart_toStartOf="@+id/scheduleTimeConstraints"
+                app:layout_constraintTop_toBottomOf="@+id/scheduleTimeConstraints">
 
                 <ImageView
                     android:id="@+id/addToCalenderIcon"
@@ -329,9 +371,11 @@
             android:id="@+id/scheduleReminderConstraints"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="8dp"
             android:background="@drawable/schedule_reminder_background"
-            android:padding="8dp"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
+            android:paddingRight="8dp"
+            android:paddingLeft="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -608,7 +652,7 @@
         android:id="@+id/constraintLayout6"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="13dp"
         android:background="@color/white"
         android:elevation="2dp"
         app:layout_constraintBottom_toTopOf="@+id/enterTestRoomButton"
@@ -653,7 +697,7 @@
             app:layout_constraintHorizontal_bias="0.6"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />-->
-        <androidx.appcompat.widget.AppCompatButton
+        <com.google.android.material.button.MaterialButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
@@ -666,7 +710,9 @@
             app:cornerRadius="5dp"
             android:clickable="true"
             android:focusable="true"
-            android:drawableStart="@drawable/button_test_room_enter"
+            app:icon="@drawable/button_test_room_enter"
+            app:iconGravity="textStart"
+            app:iconSize="14dp"
             android:background="@drawable/enter_test_room_button"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
