--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,26 +13,74 @@
         android:background="@drawable/online_text_time_left_backgroud"
         android:elevation="4dp"
         android:paddingLeft="16dp"
-        android:paddingRight="16dp"
         android:paddingTop="13dp"
+        android:paddingRight="16dp"
         android:paddingBottom="9dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/timeLeftText"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Time Left for Online Test for Design: 5 Days"
-            android:textAlignment="center"
-            android:textColor="#2E64A4"
-            android:textSize="12sp"
-            android:textStyle="normal"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:gravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:lineHeight="14sp" />
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:id="@+id/timeLeftText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Time Left for "
+                android:textAlignment="center"
+                android:textColor="#2E64A4"
+                android:textSize="12sp"
+                android:textStyle="normal" />
+
+            <TextView
+                android:id="@+id/timeLeftText2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Online Test for Design"
+                android:textAlignment="center"
+                android:textColor="#2E64A4"
+                android:textSize="12sp"
+                android:textStyle="normal"/>
+
+            <TextView
+                android:id="@+id/timeLeftText3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=": "
+                android:textAlignment="center"
+                android:textColor="#2E64A4"
+                android:textSize="12sp"
+                android:textStyle="normal"/>
+
+            <TextView
+                android:id="@+id/timeLeftText4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="5 "
+                android:textAlignment="center"
+                android:textColor="#2E64A4"
+                android:textSize="12sp"
+                android:textStyle="normal"/>
+
+            <TextView
+                android:id="@+id/timeLeftText5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Days"
+                android:textAlignment="center"
+                android:textColor="#2E64A4"
+                android:textSize="12sp"
+                android:textStyle="normal"/>
+
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -338,39 +386,6 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/scheduleContact"
                     app:layout_constraintTop_toBottomOf="@+id/scheduleContact" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/scheduleAddToCalender"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="4dp"
-                app:layout_constraintStart_toStartOf="@+id/scheduleTimeConstraints"
-                app:layout_constraintTop_toBottomOf="@+id/scheduleTimeConstraints">
-
-                <ImageView
-                    android:id="@+id/addToCalenderIcon"
-                    android:layout_width="15dp"
-                    android:layout_height="15dp"
-                    android:layout_marginEnd="4dp"
-                    android:src="@drawable/add_to_calender_icon"
-                    app:layout_constraintBottom_toBottomOf="@+id/addToCalenderText"
-                    app:layout_constraintEnd_toStartOf="@+id/addToCalenderText"
-                    app:layout_constraintTop_toTopOf="@+id/addToCalenderText" />
-
-                <TextView
-                    android:id="@+id/addToCalenderText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingVertical="8dp"
-                    android:text="Add to Calender"
-                    android:textColor="#2F64A3"
-                    android:textSize="12sp"
-                    android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
